# OpenWhisperAI

./: .gitignore  Cargo.toml  README.md  start.sh
apps/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/tauri/src-tauri/src/: control_server.rs  ipc.rs  logging.rs  main.rs  ptt.rs  state.rs  ui_server.rs  whisper_cli.rs
crates/core-input/: Cargo.toml
crates/core-input/src/: audio.rs  hotkeys.rs  lib.rs  meter.rs  ptt.rs
crates/inject/: Cargo.toml
crates/inject/src/: lib.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: lib.rs
crates/transcribe-engine/: Cargo.toml
crates/transcribe-engine/src/: bindings.rs  engine.rs  lib.rs  model.rs
docs/: display-protocols.md  packaging.md
scripts/: build-appimage.sh  build-windows-installer.ps1  openwhisperai-toggle.sh  setup-hyprland-hotkey.sh  start-headless.sh
scripts/windows/: installer.wxs
tauri-app/public/: bridge.js  index.html  indicator.css  indicator.html  main.js  styles.css
tauri-app/src/: main.js  styles.css
tauri-app/src/utils/: formatters.js  formatters.test.js
