[package]
name = "openwhisperai-shell"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "1" }
shared-types = { path = "../../../crates/shared-types" }

[build-dependencies]
tauri-build = { version = "1" }
