[package]
name = "openwhisperai-shell"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1" }
shared-types = { path = "../../../crates/shared-types" }

[build-dependencies]
tauri-build = { version = "1" }
