[package]
name = "openwhisperai-shell"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
arboard = "3"
core-input = { path = "../../../crates/core-input" }
cpal = "0.15"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
tauri = { version = "1", features = ["api-all", "custom-protocol", "icon-png", "system-tray"] }
tiny_http = "0.12"
transcribe-engine = { path = "../../../crates/transcribe-engine" }
shared-types = { path = "../../../crates/shared-types" }
ureq = "2"
zip = "0.6"

[build-dependencies]
tauri-build = { version = "1" }
